--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-multi-carousel": "^2.8.4",
     "react-native-icons": "^0.7.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
