--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apicache": "^1.6.3",
     "axios": "^1.4.0",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
@@ -35,10 +37,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --max-http-header-size=16000 start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
+    "client": "react-scripts start",
+    "server": "nodemon server.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "dev-server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -57,5 +63,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "proxy": "http://localhost:3001"
 }
