--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-native-icons": "^0.7.1",
     "react-router-dom": "^6.6.2",
+    "react-scale-text": "^1.2.2",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
