--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-toastify": "^9.1.3",
     "save": "^2.9.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -66,6 +67,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "babel-jest": "^29.7.0",
     "nodemon": "^3.1.0"
   },
   "proxy": "http://localhost:3001"
